# code-assist

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml
cli/: embed.py  evaluate.py  extract.py  generate.py  main.py
data_extraction/extractors/: github_code_extractor.py
embedding/: compare_embeddings.py  generate_embeddings.py
embedding/models/: models.py
evaluation/: evaluate_retrieval.py
evaluation/data_generators/: prompt_code_pair_dataset.py  prompt_code_pair_generator.py
experimentation/: code_llama_pt.ipynb
rag/: rag_engine.py
src/code_assistant/cli/: __init__.py  context.py  embed.py  evaluate.py  extract.py  generate.py  main.py  pipeline.py  rag.py
src/code_assistant/context/: manager.py  models.py
src/code_assistant/data_extraction/extractors/: confluence_document_extractor.py  exceptions.py  github_code_extractor.py  local_pdf_document_extractor.py  notion_document_extractor.py
src/code_assistant/embedding/: code_embedder.py  compare_embeddings.py  document_embedder.py  generate_embeddings.py
src/code_assistant/embedding/models/: models.py
src/code_assistant/evaluation/: evaluate_retrieval.py
src/code_assistant/evaluation/data_generators/: prompt_code_pair_dataset.py  prompt_code_pair_generator.py
src/code_assistant/experimentation/: code_llama_pt_quant.ipynb  code_llama_tf.ipynb
src/code_assistant/feedback/: exceptions.py  interface.py  manager.py  mixins.py  models.py
src/code_assistant/feedback/interfaces/: api.py  cli.py
src/code_assistant/interfaces/api/: main.py  models.py
src/code_assistant/interfaces/api/models/: chat_models.py  pipeline_models.py
src/code_assistant/interfaces/cli/: extract.py  generate.py  pipeline.py
src/code_assistant/logging/: logger.py
src/code_assistant/models/: __init__.py  embedding.py  factory.py  prompt.py  types.py
src/code_assistant/pipeline/: pipeline.py  step.py
src/code_assistant/pipeline/coding/: models.py  step.py
src/code_assistant/pipeline/requirements_engineering/: step.py
src/code_assistant/pipeline/requirements_gathering/: schema.py  step.py
src/code_assistant/prompt/: models.py
src/code_assistant/rag/: rag_engine.py
src/code_assistant/scripts/test/: docker_env.py
src/code_assistant/storage/: chats.py  code_store.py  codebase.py  database_storage.py  document.py  messages.py  stores.py  types.py
src/code_assistant/storage/stores/: base.py  code.py  document.py
storage/: code_store.py
tests/data_generators/: prompt_code_pair_dataset.py  prompt_code_pair_generator.py
(+11 files in other folders)
