[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "code-assistant"
dynamic = ["version"]
description = "A tool for code analysis and generation using large language models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Lawrence Godfrey", email = "lawrencegodfrey58@gmail.com"},
]

dependencies = [
    "numpy",
    "fire",
    "openai",
    "python-dotenv",
    "tqdm",
    "torch",
    "transformers",
    "astor",
    "GitPython",
    "einops",
    "numpy>=1.24.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/  # exclude tests directory in root only
'''

[tool.isort]
profile = "black"  # Makes isort compatible with black
multi_line_output = 3
line_length = 88  # Matches black's line length
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[project.urls]
Homepage = "https://github.com/Lawrence-Godfrey/code-assist"
Repository = "https://github.com/Lawrence-Godfrey/code-assist.git"
Documentation = "https://github.com/Lawrence-Godfrey/code-assist#readme"

[project.scripts]
code-assistant = "code_assistant.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["code_assistant"]